2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/QuoteCostCalculation_old__c.object-meta.xml
<CustomObject>
    <description>Use to create a quote cost estimate</description>
    <label>Quote Cost Calculation_old</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Salesforce quote ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Cost Calculation_old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>