2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Ad_Hoc_Cost3__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc_Cost3__c</fullName>
    <label>Ad Hoc Cost3</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>