2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Ad_Hoc_Item1__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc_Item1__c</fullName>
    <label>Ad Hoc Item1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>