2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Adjusted_Final_Quote__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Final_Quote__c</fullName>
    <label>Adjusted Final Quote</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>