2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Number of cuft, kg or pounds</description>
    <label>Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>