2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Comments_Destination__c.field-meta.xml
<CustomField>
    <fullName>Comments_Destination__c</fullName>
    <description>Comments regarding the Destination Charges</description>
    <label>Comments: Destination</label>
    <type>TextArea</type>
</CustomField>