2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Comments_Freight__c.field-meta.xml
<CustomField>
    <fullName>Comments_Freight__c</fullName>
    <description>Any comments connected to the costs of freight</description>
    <label>Comments: Freight</label>
    <type>TextArea</type>
</CustomField>