2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Comments_Origin__c.field-meta.xml
<CustomField>
    <fullName>Comments_Origin__c</fullName>
    <description>Any comments related to the origin charges</description>
    <label>Comments: Origin</label>
    <type>TextArea</type>
</CustomField>