2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Customs__c.field-meta.xml
<CustomField>
    <fullName>Customs__c</fullName>
    <label>Customs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>