2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Desired_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Desired_Profit_Margin__c</fullName>
    <description>Fill in the profit margin desired to be added on the internal cost</description>
    <label>Desired Profit Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>