2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Dest_cost__c.field-meta.xml
<CustomField>
    <fullName>Dest_cost__c</fullName>
    <formula>( Dest_labour_unit__c  *  Amount__c  )  + 
 Dest_transport__c  + 
 Dest_haulier__c  + 
 Dest_THC__c +
 Dest_LOLO__c  + 
 Dest_Handyman__c+
 Dest_Misc__c +  
Destinantion_lumpsum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>