2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Dest_Handyman__c.field-meta.xml
<CustomField>
    <fullName>Dest_Handyman__c</fullName>
    <label>Dest. Handyman</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>