2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Dest_Misc__c.field-meta.xml
<CustomField>
    <fullName>Dest_Misc__c</fullName>
    <label>Dest. Misc</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>