2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Dest_THC__c.field-meta.xml
<CustomField>
    <fullName>Dest_THC__c</fullName>
    <description>Charges at the Destination</description>
    <label>Dest. THC</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>