2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Dest_transport__c.field-meta.xml
<CustomField>
    <fullName>Dest_transport__c</fullName>
    <label>Dest. transport</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>