2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Destinantion_lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Destinantion_lumpsum__c</fullName>
    <description>If the total destination cost is given as a lump sum</description>
    <label>Dest. lumpsum</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>