2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Freight_cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_cost__c</fullName>
    <formula>Or_THC__c  + 
 Customs__c  +  
Freight_surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>