2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Freight_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Freight_surcharge__c</fullName>
    <label>Freight surcharge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>