2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Fumigation__c.field-meta.xml
<CustomField>
    <fullName>Fumigation__c</fullName>
    <label>Fumigation</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>