2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Haulage__c.field-meta.xml
<CustomField>
    <fullName>Haulage__c</fullName>
    <label>Haulage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>