2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Internal_cost__c.field-meta.xml
<CustomField>
    <fullName>Internal_cost__c</fullName>
    <formula>Or_cost__c  + 
 Freight_cost__c  + 
 Dest_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>