2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Load_Type__c</fullName>
    <label>Load Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loose Load</fullName>
            </value>
            <value>
                <fullName>Lifvans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>