2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Local_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Local_Transfer__c</fullName>
    <label>Local Transfer</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>