2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Marked_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>Marked_Up_Amount__c</fullName>
    <formula>Internal_cost__c  *  ( 1 +  Desired_Profit_Margin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marked Up Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>