2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Marketing_Person__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N200000011hfBEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>