2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>What type of goods will be moved?</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>