2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_cost__c.field-meta.xml
<CustomField>
    <fullName>Or_cost__c</fullName>
    <formula>( Or_crate_s_unit__c *  Amount__c  )  + 
  ( Or_Labour_unit__c  *  Amount__c   )+
 (  Or_material_s_unit__c  *  Amount__c ) +  
Or_transport__c  + 
 Special_crate__c +
 Haulage__c  + 
 Fumigation__c+
 Ad_Hoc_Cost1__c +
 Ad_Hoc_Cost2__c  + 
 Ad_Hoc_Cost3__c +
 Or_lumpsum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>