2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_crate_s_unit__c.field-meta.xml
<CustomField>
    <fullName>Or_crate_s_unit__c</fullName>
    <label>Or. crate (s$)/unit</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>