2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_Handyman__c.field-meta.xml
<CustomField>
    <fullName>Or_Handyman__c</fullName>
    <label>Or. Handyman</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>