2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_Labour_unit__c.field-meta.xml
<CustomField>
    <fullName>Or_Labour_unit__c</fullName>
    <description>Labour cost per qubic feet at the Origin</description>
    <label>Or. labour (s$)/unit</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>