2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Or_lumpsum__c</fullName>
    <description>If the total cost of the origin is to be given as a lumpsum</description>
    <label>Or. lumpsum</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>