2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_THC__c.field-meta.xml
<CustomField>
    <fullName>Or_THC__c</fullName>
    <label>Or. THC</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>