2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Or_transport__c.field-meta.xml
<CustomField>
    <fullName>Or_transport__c</fullName>
    <label>Or. transport</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>