2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Origin_Piano__c.field-meta.xml
<CustomField>
    <fullName>Origin_Piano__c</fullName>
    <label>Or. Piano</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>