2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <description>Fill in the appriate status</description>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>To be Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Sent Out</fullName>
            </value>
            <value>
                <fullName>Accepted by Client</fullName>
            </value>
            <value>
                <fullName>Rejected by Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>