2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N200000011hexEAA</relationshipName>
    <type>Lookup</type>
</CustomField>