2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Second_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Second_Delivery__c</fullName>
    <label>Second Delivery</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>