2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Special_crate__c.field-meta.xml
<CustomField>
    <fullName>Special_crate__c</fullName>
    <label>Special crate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>