2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Total_Costing__c.field-meta.xml
<CustomField>
    <fullName>Total_Costing__c</fullName>
    <formula>Internal_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Costing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>