2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>SEA</fullName>
                <default>true</default>
                <label>SEA</label>
            </value>
            <value>
                <fullName>ROAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>