2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transport__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
                <default>true</default>
                <label>Kg</label>
            </value>
            <value>
                <fullName>CuFt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>