2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/fields/Where2Where__c.field-meta.xml
<CustomField>
    <fullName>Where2Where__c</fullName>
    <label>Mode of Move</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>Door to Port</fullName>
            </value>
            <value>
                <fullName>Origin Service</fullName>
            </value>
            <value>
                <fullName>Free On Board</fullName>
            </value>
            <value>
                <fullName>Pack for Storage</fullName>
            </value>
            <value>
                <fullName>Destination Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>