2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/recordTypes/ContractApprover.recordType-meta.xml
<RecordType>
    <fullName>ContractApprover</fullName>
    <active>true</active>
    <description>This view allows you to select &quot;Approved&quot; under QCC status</description>
    <label>Contract Approver</label>
</RecordType>