2nd training/Community/Community/Community1/force-app/main/default/objects/QuoteCostCalculation_old__c/recordTypes/NonContractApprover.recordType-meta.xml
<RecordType>
    <fullName>NonContractApprover</fullName>
    <active>true</active>
    <description>The view that those not allowed to approve contracts will see</description>
    <label>Non Contract Approver</label>
</RecordType>